--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Form</h1>
-        <form method="POST" action="http://localhost:3000">
+        <form method="GET" action="http://localhost:3000/test123">
             <label for="name">Name: </label>
             <input type="text" name="name" id="name" />
             <input type="submit" value="Send Request" />
