--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 <html>
     <head>
         <title>Test Form</title>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     </head>
     <body>
         <h1>Form</h1>
-        <form method="POST" action="http://localhost:3000/MemeQuotes">
+        <form method="GET" action="http://localhost:3000/MemeQuotes">
             <label for="name">Name: </label>
             <input type="text" name="name" id="name" />
             <input type="submit" value="Send Request" />
+            <button onclick="RunDelete()" id="DltBtn" type="button">DELETE</button>
         </form>
+        <script type="text/javascript">
+            function RunDelete(){
+                $.ajax({
+                    url: 'http://localhost:3000/MemeQuotes',
+                    type: 'DELETE',
+                    success: function(result) {
+                        // Do something with the result
+                        console.log('Delete result', result);
+                    }
+                });
+            }
+        </script>
     </body>
 </html>
