--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>Form</h1>
-        <form method="GET" action="http://localhost:3000/MemeQuotes">
+        <form method="GET" action="https://localhost:3030/MemeQuotes">
             <label for="name">Name: </label>
             <input type="text" name="name" id="name" />
             <input type="submit" value="Send Request" />
